Added Inorder Traversal and PostOrder Traversal in BinaRY Trees

--- a/Tree/binary_tree.ipynb
+++ b/Tree/binary_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "18e6be30-2f0b-4f46-9f21-c08583ee4764",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "f13d8f6d-77ee-4c46-8425-f58dfd513d0c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "8bca2a21-45c2-4a95-96e6-61464401d7aa",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "d70bcc7a-44a0-44f2-a39b-02e02e238da1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "e8ee2885-b10c-488f-aff3-33d1c4fe2aa0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "177212c3-f48c-4143-b30a-399f435a7d1a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
+   "id": "901e91eb-dede-4887-89fc-3cfc4787db55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inOrderTraversal(rootNode):\n",
+    "    if not rootNode:\n",
+    "        return\n",
+    "    inOrderTraversal(rootNode.leftChild)\n",
+    "    print(rootNode.data)\n",
+    "    inOrderTraversal(rootNode.rightChild)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "72840e64-2cf2-4658-917b-684a8b97ed83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def postOrderTraversal(rootNode):\n",
+    "    if not rootNode:\n",
+    "        return\n",
+    "    postOrderTraversal(rootNode.leftChild)\n",
+    "    postOrderTraversal(rootNode.rightChild)\n",
+    "    print(rootNode.data)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "2de75505-20e2-49d0-9965-9076134eec0d",
    "metadata": {},
    "outputs": [
@@ -92,11 +123,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "8fa15b54-e709-4270-97e9-653c38c8a6c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hot\n",
+      "Drinks\n",
+      "Cold\n"
+     ]
+    }
+   ],
+   "source": [
+    "inOrderTraversal(bt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "aec5da7f-f2ef-40a4-9e3b-015ec7d4c1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hot\n",
+      "Cold\n",
+      "Drinks\n"
+     ]
+    }
+   ],
+   "source": [
+    "postOrderTraversal(bt)"
+   ]
   }
  ],
  "metadata": {
