--- a/Tree/binary_tree.ipynb
+++ b/Tree/binary_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "id": "18e6be30-2f0b-4f46-9f21-c08583ee4764",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "id": "f13d8f6d-77ee-4c46-8425-f58dfd513d0c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 96,
    "id": "8bca2a21-45c2-4a95-96e6-61464401d7aa",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 97,
    "id": "d70bcc7a-44a0-44f2-a39b-02e02e238da1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 98,
    "id": "e8ee2885-b10c-488f-aff3-33d1c4fe2aa0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 99,
    "id": "209e73bd-4858-4089-9296-5edda90c9a80",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 100,
    "id": "b0796152-5bc0-4e09-b523-558f705ea656",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 101,
    "id": "dcb72369-8775-4c15-8ee8-0664e22b3373",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 102,
    "id": "177212c3-f48c-4143-b30a-399f435a7d1a",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 103,
    "id": "901e91eb-dede-4887-89fc-3cfc4787db55",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 104,
    "id": "72840e64-2cf2-4658-917b-684a8b97ed83",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 105,
    "id": "2f118059-8f17-45c5-a0ea-3dd07e51e649",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 106,
    "id": "01450411-55f9-4a25-8219-cf8ad43445fa",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 107,
+   "id": "495ce3a1-008a-4c5e-bc8f-f08717f91d87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchBT(rootNode, nodeValue):\n",
+    "    if not rootNode:\n",
+    "        return \"The Binary tree is empty\"\n",
+    "    else:\n",
+    "        queue = Queue()\n",
+    "        queue.enqueue(rootNode)\n",
+    "        while not(queue.isEmpty()):\n",
+    "            root = queue.dequeue()\n",
+    "            if root.value.data == nodeValue:\n",
+    "                return \"The node value was found in the binary tree\"\n",
+    "                break\n",
+    "            if root.value.leftChild is not None:\n",
+    "                queue.enqueue(root.value.leftChild)\n",
+    "            if root.value.rightChild is not None:\n",
+    "                queue.enqueue(root.value.rightChild)\n",
+    "    return \"The node value was not found in the binary tree\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "id": "2de75505-20e2-49d0-9965-9076134eec0d",
    "metadata": {},
    "outputs": [
@@ -252,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "id": "8fa15b54-e709-4270-97e9-653c38c8a6c2",
    "metadata": {},
    "outputs": [
@@ -274,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 110,
    "id": "aec5da7f-f2ef-40a4-9e3b-015ec7d4c1b7",
    "metadata": {},
    "outputs": [
@@ -296,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 111,
    "id": "e37993b8-990e-4c9e-a4a3-4e9c6b139e2a",
    "metadata": {},
    "outputs": [
@@ -315,6 +340,33 @@
    "source": [
     "levelOrderTraversal(bt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "68b9ca9a-f550-44d4-b6f1-ab8ecbfc98dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The node value was found in the binary tree\n",
+      "The node value was not found in the binary tree\n"
+     ]
+    }
+   ],
+   "source": [
+    "searchBT(bt, \"Tea\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9c69e29-4e83-49b7-890f-8b519c9b6513",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
